# banana-eye

./: .env.example  .gitignore  README.md  app.py  main.py  pipeline.py  pyproject.toml  requirements.txt
templates/: index.html  results.html
